<resources>
    <string name="app_name">NYT Feed Reader</string>
    <string name="title">title</string>
    <string name="resume">TextView</string>
    <string name="todo">TODO</string>
    <string name="refresh">refresh list</string>
    <string name="clear_list">unselect read reports</string>
    <string name="loading">Loading list...</string>
    <string name="prompt">Select section: </string>

    <string-array name="section_list">
        <item>home</item>
        <item>arts</item>
        <item>automobiles</item>
        <item>books</item>
        <item>business</item>
        <item>fashion</item>
        <item>food</item>
        <item>health</item>
        <item>insider</item>
        <item>magazine</item>
        <item>movies</item>
        <item>nyregion</item>
        <item>obituaries</item>
        <item>opinion</item>
        <item>politics</item>
        <item>realestate</item>
        <item>science</item>
        <item>sports</item>
        <item>sundayreview</item>
        <item>technology</item>
        <item>theater</item>
        <item>t-magazine</item>
        <item>travel</item>
        <item>upshot</item>
        <item>us</item>
        <item>world</item>
    </string-array>
</resources>